@@ -6,6 +6,7 @@ import static com.gentics.mesh.search.index.MappingHelper.UUID_KEY;
 import javax.inject.Inject;
 import javax.inject.Singleton;
 
+import com.gentics.mesh.core.data.Project;
 import com.gentics.mesh.core.data.Tag;
 import com.gentics.mesh.core.data.TagFamily;
 import com.gentics.mesh.search.index.AbstractTransformer;
@@ -25,7 +26,15 @@ public class TagTransformer extends AbstractTransformer<Tag> {
 	}
 
 	public String generateVersion(Tag tag) {
-		return ETag.hash(toDocument(tag, false).encode());
+		Project project = tag.getProject();
+		TagFamily tagFamily = tag.getTagFamily();
+
+		StringBuilder builder = new StringBuilder();
+		builder.append(tag.getElementVersion());
+		builder.append(project.getElementVersion());
+		builder.append(tagFamily.getElementVersion());
+		// No need to add users since the creator/editor edge affects the tag version
+		return ETag.hash(builder.toString());
 	}
 
 	/**
